# alfaAPY

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  pool_stats.wasm  tsconfig.json
docs/: error_codes.md  icp_swap.md  kong_swap_provider_flow.md  liquidity_pools_calculation_flow.md  smart_rebalance.md
frontend/: .gitignore  README.md  canister_ids.json  dfx.json  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  constants.ts  index.css  main.tsx
frontend/src/components/: footer.tsx  header.tsx  index.ts  layout.tsx  page-loader.tsx
frontend/src/hooks/: balances.ts  event-records.ts  index.ts  payments.ts  stats.ts  strategies.ts  strategy.ts  swap.ts  tokens.ts  useDashboard.ts
frontend/src/idl/: icrc1_idl.ts  icrc1_oracle.ts  icrc1_oracle_idl.ts  icrc1_registry.ts  icrc1_registry_idl.ts  index-icrc1.ts  index-icrc1_idl.ts  index.ts  kong_backend.ts  ledger.ts  pool_stats.ts  pool_stats_idl.ts  vault.ts  vault_idl.ts
frontend/src/interfaces/: dashboard.ts
frontend/src/services/: actors.ts  cache.ts  index.ts  utils.ts
frontend/src/store/: index.ts  store.ts  types.ts
scripts/: run_tests.sh
src/external_canisters/kong_swap/c2c_client/: Cargo.toml
src/external_canisters/kong_swap/c2c_client/src/: lib.rs
src/libraries/icrc_ledger_client/: Cargo.toml
src/libraries/icrc_ledger_client/src/: lib.rs
src/libraries/liquidity/: Cargo.toml
src/libraries/liquidity/src/: lib.rs  liquidity_calculator.rs  liquidity_client.rs  liquidity_router.rs
src/libraries/liquidity/src/clients/: icpswap.rs  kongswap.rs  mod.rs
src/libraries/providers/: Cargo.toml
src/libraries/providers/src/: icpswap.rs  kongswap.rs  lib.rs  providers_factory.rs
src/libraries/providers/src/mock/: icpswap.rs  kongswap.rs
src/libraries/swap/: Cargo.toml
src/libraries/swap/src/: lib.rs  swap_service.rs
src/libraries/swap/src/token_swaps/: icpswap.rs  kongswap.rs  swap_client.rs
src/libraries/types/: Cargo.toml
src/libraries/types/src/: context.rs  cryptocurrency.rs  exchange_id.rs  exchanges.rs  lib.rs  liquidity.rs  pin_number.rs  pool.rs  pool_stats.rs  swap_tokens.rs  user.rs
src/libraries/utils/: Cargo.toml
src/libraries/utils/src/: constants.rs  environment.rs  lib.rs  pool_id_util.rs  token_fees.rs  token_transfer.rs  util.rs
src/pool_stats/: Cargo.toml  build.sh  pool_stats.did
src/pool_stats/src/: lib.rs  service.rs
src/pool_stats/src/event_logs/: event_log.rs  event_log_impl.rs  event_log_params_builder.rs  event_log_service.rs
src/pool_stats/src/event_records/: event_record.rs  event_record_impl.rs  event_record_service.rs  mod.rs
src/pool_stats/src/liquidity/: liquidity.rs  liquidity_service.rs  mod.rs
src/pool_stats/src/pool_metrics/: mod.rs  pool_apy_service.rs  pool_metrics.rs  pool_metrics_service.rs  pool_yield_service.rs
src/pool_stats/src/pool_snapshots/: mod.rs  pool_snapshot.rs  pool_snapshot_service.rs
src/pool_stats/src/pool_snapshots/pool_data/: mod.rs  pool_data.rs
src/pool_stats/src/pool_snapshots/position_data/: mod.rs  position_data.rs
src/pool_stats/src/pools/: mod.rs  pool.rs  pool_data_service.rs  pool_metrics.rs  pool_metrics_service.rs  pool_service.rs  pool_snapshot.rs
src/pool_stats/src/repository/: event_records_repo.rs  mod.rs  pools_repo.rs  stable_state.rs
src/pool_stats/src/snapshots/: apy_service.rs  mod.rs  snapshot_service.rs
src/pool_stats/src/types/: types.rs
src/pool_stats/src/utils/: provider_impls.rs
src/vault/: Cargo.toml  vault.did
src/vault/src/: lib.rs  service.rs
src/vault/src/enums/: event_types.rs  mod.rs
src/vault/src/errors/: mod.rs
src/vault/src/errors/internal_error/: builder.rs  error.rs
src/vault/src/errors/response_error/: builder.rs  error.rs
src/vault/src/event_logs/: event_log.rs  event_log_builder.rs  event_log_impl.rs  event_log_params_builder.rs  event_log_service.rs  mod.rs
src/vault/src/event_records/: event_record.rs  event_record_impl.rs  event_record_service.rs  mod.rs
src/vault/src/event_records/events/: mod.rs  strategy_events.rs  swap_events.rs
src/vault/src/events/: event.rs  event_candid.rs  event_service.rs  mod.rs
src/vault/src/events_repo/: repo.rs
src/vault/src/kong/: kong.rs
src/vault/src/liquidity/: liquidity_client.rs  liquidity_router.rs  liquidity_service.rs  mod.rs
src/vault/src/liquidity/clients/: icpswap.rs  kongswap.rs
src/vault/src/pool/: pool.rs  pool_data.rs
src/vault/src/pool_stats/: mod.rs  pool_stats_service.rs
src/vault/src/pools/: mod.rs  pool.rs  pool_data.rs
src/vault/src/providers/: mod.rs
src/vault/src/providers/icpswap/: icpswap.rs  mod.rs
src/vault/src/providers/kong/: kong.rs  mod.rs
src/vault/src/repo/: repo.rs
src/vault/src/repository/: config_repo.rs  event_records_repo.rs  events_repo.rs  mod.rs  repo.rs  runtime_config_repo.rs  stable_state.rs  strategies_repo.rs
src/vault/src/strategies/: basic_strategy.rs  calculator.rs  mod.rs  strategy.rs  strategy_candid.rs  strategy_service.rs
src/vault/src/strategies/impl/: ck_btc_strategy.rs  ck_eth_strategy.rs  description.rs  icp_strategy.rs  icp_usdt_kong_icpswap_strategy.rs  ics_icp_strategy.rs  mod.rs  panda_icp_stategy.rs  pasta_icp_stategy.rs
src/vault/src/strategies/stats/: mod.rs  strategy_stats_service.rs
src/vault/src/strategies/test/: mod.rs  strategy_test.rs
src/vault/src/swap/: mod.rs  swap_service.rs
src/vault/src/swap/token_swaps/: icpswap.rs  kongswap.rs  mod.rs  swap_client.rs
src/vault/src/token_swaps/: kongswap.rs  mod.rs  swap_client.rs  swap_service.rs
src/vault/src/types/: types.rs
src/vault/src/user/: mod.rs  user_service.rs
src/vault/src/util/: util.rs
src/vault/src/utils/: mod.rs
test/constants/: dfx.const.ts
test/idl/: ledger.ts  ledger_idl.ts  pool_stats.ts  pool_stats_idl.ts  vault.ts  vault_idl.ts
test/integration/: strategy.ts
test/pool_stats/: pool_stats-dev.test.ts
test/resource/: deploy_ksicp_ledger.sh
test/util/: util.ts
test/vault/: vault-dev.test.ts  vault.test.ts
(+234 files in other folders)
