[package]
name = "vault"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-ledger-types = "0.14.0"
serde = "1"
byteorder = "1.4.3"
ic-stable-structures = "0.6.7"
serde_bytes = "0.11"
serde_json = "1.0.82"