[package]
name = "vault"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-ledger-types = "0.14.0"
serde = "1"
byteorder = "1.4.3"
ic-stable-structures = "0.6.7"
serde_bytes = "0.11"
serde_json = "1.0.82"
canister_client_macros = { path = "../libraries/canister_client_macros" }
kongswap_canister = { path = "../external_canisters/kongswap/api" }
kongswap_canister_c2c_client = { path = "../external_canisters/kongswap/c2c_client" }
types = { path = "../libraries/types" }
async-trait = "0.1.87"
ic-response-codes = { workspace = true }
icpswap_swap_pool_canister = { path = "../external_canisters/icpswap_swap_pool/api" }
icpswap_swap_pool_canister_c2c_client = { path = "../external_canisters/icpswap_swap_pool/c2c_client" }
icrc_ledger_canister_c2c_client = { path = "../external_canisters/icrc_ledger/c2c_client" }
icrc_ledger_canister = { path = "../external_canisters/icrc_ledger/api" }
icrc-ledger-types = "0.1.8"
lazy_static = "1.5.0"