[package]
name = "providers"
version = "0.1.0"
edition = "2018"

[dependencies]
candid = "0.10.13"
types = { path = "../types" } 
ic-cdk = "0.17.1"
ic-response-codes = { workspace = true }
icrc_ledger_canister_c2c_client = { path = "../../external_canisters/icrc_ledger/c2c_client" }
icrc_ledger_canister = { path = "../../external_canisters/icrc_ledger/api" }
icrc-ledger-types = "0.1.8"
once_cell = "1.19.0"
kongswap_canister = { path = "../../external_canisters/kongswap/api" }
kongswap_canister_c2c_client = { path = "../../external_canisters/kongswap/c2c_client" }
icpswap_swap_pool_canister = { path = "../../external_canisters/icpswap_swap_pool/api" }
icpswap_swap_pool_canister_c2c_client = { path = "../../external_canisters/icpswap_swap_pool/c2c_client" }
icpswap_swap_factory_canister = { path = "../../external_canisters/icpswap_swap_factory/api" }
icpswap_swap_factory_canister_c2c_client = { path = "../../external_canisters/icpswap_swap_factory/c2c_client" }
icpswap_swap_calculator_canister = { path = "../../external_canisters/icpswap_swap_calculator/api" }
icpswap_swap_calculator_canister_c2c_client = { path = "../../external_canisters/icpswap_swap_calculator/c2c_client" }
icpswap_node_index_canister = { path = "../../external_canisters/icpswap_node_index/api" }
icpswap_node_index_canister_c2c_client = { path = "../../external_canisters/icpswap_node_index/c2c_client" }
icpswap_tvl_storage_canister = { path = "../../external_canisters/icpswap_tvl_storage/api" }
icpswap_tvl_storage_canister_c2c_client = { path = "../../external_canisters/icpswap_tvl_storage/c2c_client" }
icpswap_global_index_canister = { path = "../../external_canisters/icpswap_global_index/api" }
icpswap_global_index_canister_c2c_client = { path = "../../external_canisters/icpswap_global_index/c2c_client" }
utils = { path = "../utils" }
errors = { path = "../errors" }
icrc_ledger_client = { path = "../icrc_ledger_client" }
