[package]
name = "swap"
version = "0.1.0"
edition = "2018"

[dependencies]
candid = "0.10.13"
types = { path = "../types" }
async-trait = "0.1.87"
num-traits = "0.2"
ic-cdk = "0.17.1"
serde = "1"
ic-response-codes = { workspace = true }
icrc_ledger_canister_c2c_client = { path = "../../external_canisters/icrc_ledger/c2c_client" }
icrc_ledger_canister = { path = "../../external_canisters/icrc_ledger/api" }
icrc-ledger-types = "0.1.8"
icpswap_swap_pool_canister = { path = "../../external_canisters/icpswap_swap_pool/api" }
icpswap_swap_factory_canister = { path = "../../external_canisters/icpswap_swap_factory/api" }
kongswap_canister = { path = "../../external_canisters/kongswap/api" } 
kongswap_canister_c2c_client = { path = "../../external_canisters/kongswap/c2c_client" }
providers = { path = "../providers" }
utils = { path = "../utils" }
errors = { path = "../errors" }
