[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
hex = { workspace = true }
ic-ledger-types = { workspace = true }
icrc-ledger-types = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
getrandom = { version = "0.2.0", features = ["custom"] }
uuid = { version = "1.17.0", features = ["v4", "rng-getrandom"] }
