[package]
name = "utils"
version = "0.1.0"
edition = "2018"

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
serde_json = "1.0.82"
hex = "0.4.3"
icrc-ledger-types = "0.1.8"
num-bigint = "0.4.3"
once_cell = "1.19.0"
canister_client = { path = "../canister_client" }
icrc_ledger_canister_c2c_client = { path = "../../external_canisters/icrc_ledger/c2c_client" }
icrc_ledger_canister = { path = "../../external_canisters/icrc_ledger/api" }
errors = { path = "../errors" }
types = { path = "../types" }